[package]
name = "sample-consensus"
version = "1.0.1"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Abstractions for sample consensus algorithms such as RANSAC"
documentation = "https://docs.rs/sample-consensus/"
repository = "https://github.com/rust-cv/sample-consensus"
keywords = ["ransac", "sample", "consensus", "model", "estimator"]
categories = ["algorithms", "no-std", "science", "science::robotics", "computer-vision"]
license = "MIT"
readme = "README.md"
